# aitest

./: .gitignore  APPMOD_SETTINGS.md  LICENSE  README.md  explain_class_method.py  pyproject.toml
src/: class_method_learn.py  copy_learn.py  debug_ollama.py  deepseek.py  function_learn.py  function_tool.py  multi_agent.py  single_agent.py
src/agents/: __init__.py  multi_agent.py
src/function_calling/: __init__.py
src/python_basics/: __init__.py  class_method_learn.py  copy_learn.py  debug_ollama.py  dict_update_demo.py  explain_class_method.py
src/rag/: ollama_api_format.md  rag_test.py  sync_embedding.py  sync_embedding_v2.py  test_ollama_connection.py  vectors_test.py  知识库_考核要求.md
